<resources>
    <string name="app_name">AgendaGeolocalizada</string>
    <string name="tituloEventos">Events</string>
    <string name="tituloMapa">Map</string>
    <string name="tituloAdd">Add Event</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="add_button">ADD</string>
    <string name="date">Date</string>
</resources>