<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="42dp"
        android:text="@string/hint_title"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLatitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="30dp"
            android:text="@string/hint_latitude"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvLongitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="30dp"
            android:text="@string/hint_longitude"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="30dp"
            android:textSize="24sp"
            tools:text="@string/date" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="30dp"
        android:text="@string/hint_description"
        android:textSize="24sp"
        android:textStyle="italic" />


</LinearLayout>
