<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.agendageolocalizada.ui.eventos.EventosFragment"
        android:label="@string/tituloEventos"
        tools:layout="@layout/fragment_eventos" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.agendageolocalizada.ui.mapa.MapaFragment"
        android:label="@string/tituloMapa"
        tools:layout="@layout/fragment_mapa" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.agendageolocalizada.ui.add.AddFragment"
        android:label="@string/tituloAdd"
        tools:layout="@layout/fragment_add" />
</navigation>