<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flow_horizontalAlign="start"
    tools:context=".ui.add.AddFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CalendarView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/etTitulo"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_title"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAllCaps="false"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/hint_description"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/etLatitud"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:digits="0123456789-."
            android:ems="10"
            android:hint="@string/hint_latitude"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/etLongitud"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:digits="0123456789-."
            android:ems="10"
            android:hint="@string/hint_longitude"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/botonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:soundEffectsEnabled="false"
            android:text="@string/add_button"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:rippleColor="#100F0F" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>